--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ Flask==2.0.1
 requests==2.26.0
 pandas==1.3.3  # Add the specific versions of the libraries used
 # Add other dependencies as needed
+gunicorn==20.1.0
