--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ pandas==1.3.3  # Add the specific versions of the libraries used
 # Add other dependencies as needed
 gunicorn==20.1.0
 beautifulsoup4==4.12.2
+Flask-Cors==4.0.0
